fixed invisible popup

--- a/src/components/Popup/popup.scss
+++ b/src/components/Popup/popup.scss
@@ -1,4 +1,4 @@
-.popup {
+.popupWindow {
     position: fixed;
     bottom: 3em;
     left: 3em;
